# obsidian-vault-tools

./: .env.production.example  .gitignore  ASCII_ART_GUIDE.md  AUDIO_SYSTEM_README.md  CLAUDE.md  DYNAMIC_MCP_TOOLS_PLAN.md  ENHANCED_FEATURES_DEMO.md  FLOWCHART_GUIDE.md  LLM_INTEGRATION_SUMMARY.md  LLM_SETUP_GUIDE.md  MCP_CONFIG_GUIDE.md  MULTI_AGENT_ORCHESTRATION_PLAN.md  NICK_RETURN_GUIDE.md  PM_12_AREAS_DEEP_ANALYSIS.md  PM_AUTOMATION_SUITE_PLAN.md  PM_AUTOMATION_SUITE_TDD.md  PM_AUTOMATION_TODO.md  PM_BURNOUT_SOLUTION_TRACKER.md  PM_WORK_COMPLETED_SUMMARY.md  QUICK_START.md  README.md  RELEASE_NOTES_v2.3.0.md  RELEASE_v2.0.0.md  REMAINING_WORK_SUMMARY.md  SECURITY.md  SETUP.md  TAG_CORRUPTION_RCA.md  TAG_FIX_SUMMARY.md  TECHNICAL_DEBT_REPORT.md  TOOLS_README.md  UBUNTU_INSTALL.md  UNIFICATION_COMPLETE.md  UNIFICATION_SUMMARY.md  UNIFIED_MANAGER_README.md  VAULT_MANAGER_README.md  VECTOR_EMBEDDINGS_TODO.md  ascii_flowchart_generator.py  audio_demo.py  audio_test_alternative.py  audio_test_improved.py  (+49 more)
.github/workflows/: auto_test.yml
ai/: llm_query_system.py  natural_language_query.py
analysis/: tag_analyzer.py  vault_query_system.py
audio/: audio_diagnostic.py  audio_fix_obvious.py  audio_manager.py  chiptune_generator.py  sound_library.py
automation_scripts/: database_pool_configurator.py  pm_burnout_prevention_system.py  pm_tools_automation.py  security_hardening_bot.py
backup/: backup_manager.py
creative/: ascii_art_converter.py  ascii_magic_converter.py  flowchart_generator.py
docs/: MEMORY_INTEGRATION_GUIDE.md  SECURITY.md
examples/: README.md  mcp_config_example.json
homebrew/: obsidian-vault-tools.rb
llm_feedback/: feedback.db
manager/: enhanced_manager.py  vault_manager.py
models/: classifier_adapter.py  embedding_adapter.py  transformer_adapter.py
obsidian-librarian-v2/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT_PLAN.md  Makefile  README.md  SETUP_GUIDE.md  TASKS.md  mkdocs.yml  monitor_agents.sh
obsidian-librarian-v2/docs/: api-reference.md  implementation-plan.md  user-guide.md
obsidian-librarian-v2/example-vault/: .gitignore  .obsidian-librarian.json  README.md  Welcome.md  test-backup.md
obsidian-librarian-v2/python/: .gitignore  CLAUDE.md  CLI_ARCHITECTURE_FIX_SUMMARY.md  LICENSE  MANIFEST.in  README.md  analyze_imports.py  conftest.py  pyproject.toml  pytest.ini  run_coverage.sh  setup.py  test_cli.py
obsidian-librarian-v2/python/benchmarks/: bench_organization_operations.py  bench_research_operations.py  bench_tag_operations.py  bench_vault_operations.py
obsidian-librarian-v2/python/docs/: git_integration.md
obsidian-librarian-v2/python/examples/: git_integration_demo.py
obsidian-librarian-v2/python/obsidian_librarian/: __init__.py  __main__.py  cli.py  config_loader.py  librarian.py  sources.py  vault.py
obsidian-librarian-v2/python/obsidian_librarian/ai/: __init__.py  content_analyzer.py  content_summarizer.py  embeddings.py  language_models.py  models.py  query_processor.py
obsidian-librarian-v2/python/obsidian_librarian/api/: __init__.py
obsidian-librarian-v2/python/obsidian_librarian/cli/: __init__.py  git_commands.py  main.py  main_typer.py
obsidian-librarian-v2/python/obsidian_librarian/cli/commands/: __init__.py  core_commands.py  tag_commands.py  tag_commands_typer.py
obsidian-librarian-v2/python/obsidian_librarian/cli/utils/: __init__.py  async_utils.py  console.py  logging.py
obsidian-librarian-v2/python/obsidian_librarian/database/: __init__.py  analytics.py  base.py  cache.py  migrations.py  vector.py
obsidian-librarian-v2/python/obsidian_librarian/models/: __init__.py  models.py
obsidian-librarian-v2/python/obsidian_librarian/services/: __init__.py  analysis.py  auto_organizer.py  git_service.py  research.py  tag_manager.py  template.py
obsidian-librarian-v2/python/tests/: TEST_SUITE_SUMMARY.md  __init__.py  test_ai_components.py  test_ai_integration.py  test_analysis.py  test_auto_organizer.py  test_git_service.py  test_research.py  test_tag_manager.py  test_vault.py
obsidian-librarian-v2/python/tests/e2e/: test_complete_workflow.py
obsidian-librarian-v2/python/tests/integration/: README.md  conftest.py  test_analysis_workflow.py  test_backup_restore.py  test_cli_commands.py  test_cli_commands_tags_organize.py  test_librarian_integration.py  test_research_integration.py  test_research_workflow.py  test_vault_integration.py
obsidian-librarian-v2/python/tests/unit/: test_auto_organizer_comprehensive.py  test_database.py  test_fallback_mechanisms.py  test_tag_manager_comprehensive.py
obsidian-librarian-v2/rust-core/: Cargo.toml
obsidian-librarian-v2/rust-core/librarian-core/: Cargo.toml
obsidian-librarian-v2/rust-core/librarian-core/benches/: file_operations.rs
obsidian-librarian-v2/rust-core/librarian-core/src/: error.rs  file_ops.rs  lib.rs  markdown.rs  note.rs  vault.rs  watcher.rs
obsidian-librarian-v2/rust-core/librarian-search/: Cargo.toml
obsidian-librarian-v2/rust-core/librarian-search/src/: embeddings.rs  error.rs  index.rs  lib.rs
obsidian-librarian-v2/rust-core/librarian-web/: Cargo.toml
obsidian-librarian-v2/rust-core/librarian-web/src/: client.rs  error.rs  extractor.rs  lib.rs  rate_limiter.rs  scraper.rs  sources.rs
obsidian-librarian-v2/rust-core/python-bindings/: Cargo.toml
obsidian-librarian-v2/rust-core/python-bindings/src/: lib.rs
obsidian_vault_tools/: __init__.py  analysis.py  api_auth.py  api_server.py  backup.py  cli.py  manager.py  menu_navigator.py  organization.py  pm_cli.py  research_assistant.py  security.py  system_requirements.py  utils.py
obsidian_vault_tools.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
obsidian_vault_tools/ai/: meeting_notes_organizer.py  smart_backup_manager.py
organization/: tag_fixer.py
pm_automation_suite/: .env.example  .gitignore  Makefile  PM_AUTOMATION_TEST_PLAN.md  README.md  __init__.py  pytest.ini  requirements.txt  run_tests.py  setup.py  test_phase5.py
tests/: README.md  conftest.py  run_all_tests.py
utils/: config.py
(+134 files in other folders)
