[package]
name = "librarian-search"
version = "0.1.0"
edition = "2021"
description = "High-performance vector search engine for Obsidian Librarian"

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# Vector operations and math
ndarray = { workspace = true }
rayon = "1.8"

# Embeddings and ML
candle-core = "0.3"
candle-nn = "0.3"
candle-transformers = "0.3"
hf-hub = "0.3"

# Fast similarity search
faiss = { workspace = true, optional = true }
hnswlib = "0.1"

# Storage and persistence
memmap2 = { workspace = true }
bincode = "1.3"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }
tempfile = "3.8"

[features]
default = ["hnsw"]
faiss = ["dep:faiss"]
hnsw = []

[[bench]]
name = "vector_search"
harness = false

[[bench]]
name = "embeddings"
harness = false